# Hospital_Agent

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: __init__.py  agents.py  crew.py  main.py  tasks.py  tools.py
src/hospital/: __init__.py  crew.py  main.py
src/hospital/config/: agents.yaml  tasks.yaml
src/hospital/schemas/: __init__.py
src/hospital/tools/: __init__.py  opd_fee_tool.py  patient_history_tool.py
