[tool.poetry]
name = "hospital"
version = "0.1.0"
description = "Hospital OPD Automated Token System using CrewAI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "hospital", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = "^1.15.1"
crewai-tools = "^0.14.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"

[tool.poetry.scripts]
hospital = "hospital.main:run"
run-crew = "hospital.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
